# adventofcode

./: README.md
.github/workflows/: rust.yml
2020/: go.mod
2020/day01/: main.go  main_test.go
2020/day02/: main.go  main_test.go
2020/day03/: input.txt  main.go  main_test.go
2020/day04/: main.go  main_test.go
2021/day01/: Cargo.toml
2021/day02/src/: main.rs
2021/day04/src/: main.rs
2021/day05/src/: main.rs
2021/day07/src/: main.rs
2021/day08/src/: main.rs
2021/day09/src/: main.rs
2021/day10/src/: main.rs
2021/day11/src/: main.rs
2021/day13/src/: main.rs
2021/day15/src/: main.rs
2021/day16/: Cargo.toml
2021/day16/src/: main.rs
2021/day17/src/: main.rs
2022/day01/src/: main.rs
2022/day02/src/: main.rs
2022/day03/: Cargo.toml
2022/day03/benches/: bench.rs
2022/day04/: Cargo.toml
2022/day05/: Cargo.toml  input.txt
2022/day06/: Cargo.toml
2022/day08/: Cargo.toml
2022/day09/: Cargo.toml
2022/day11/: Cargo.toml  input.txt
2022/day12/: Cargo.toml
2022/day13/: Cargo.toml
2022/day13/benches/: bench.rs
2022/day13/src/: lib.rs  main.rs
2022/day14/: Cargo.toml
2022/day18/: Cargo.toml
2022/day20/: Cargo.toml
day01/part1/: Cargo.toml
day01/part2/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/part2/: Cargo.toml  input.txt
day03/src/: main.rs
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
day08/src/: main.rs
day09/src/: main.rs
day10/src/: main.rs
day12/: Pipfile  day12.py
day14/: part2.py
day14/src/: main.rs
(+56 files in other folders)
