[package]
name = "day13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nom-parser"]

nom-parser = ["dep:nom"]
json-parser = ["dep:serde_json"]

[dependencies]
nom = { version= "7", optional = true }
serde_json = { version= "1", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
